added aria-labels and alt-text

--- a/index/index.html
+++ b/index/index.html
@@ -58,57 +58,44 @@
       <div class="hero-wrapper">
         <h1>Välkommen till myh.se!</h1>
 
-        <a href="#" class="button primary large">Våra verksamhetsområden</a>
+        <a href="#" class="button primary large" aria-label="Klicka här för att komma till alla våra verksamhetsområden!">Våra verksamhetsområden</a>
       </div>
     </div>
     <div id="breadcrumbs">
       <p>
         <a href="#">Start</a>
-        <!-- <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a> -->
       </p>
     </div>
     <section>
       <h2>Verksamhetsområden</h2>
-      <!-- <ul>
-        <li><a href="#">Yrkeshögskolan</a>/li></li>
-        <li><a href="#">Konst- och kulturutbildningar</a></li>
-        <li><a href="#">Tolkutbildningar</a></li>
-        <li><a href="#">Utbildningar med endast tillsyn</a></li>
-        <li><a href="#">SeQF</a></li>
-        <li><a href="#">Validering</a></li>
-      </ul> -->
     </section>
-    <!--MAIN HERE? OR ABOVE INCLUDING VERKSAM. AND HERO IMG?-->
     <main class="grid">
       <div class="card col-2-3 apply">
         <section>
           <h3>Ansök om att bedriva utbildning</h3>
           <ul class="page-nav">
-            <li><a href="#">Yrkeshögskoleutbildning</a></li>
-            <li><a href="#">Konst- och kulturutbildning</a></li>
-            <li><a href="#">Tolkutbildning</a></li>
-            <li><a href="#">Utbildning med endast tillsyn</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Yrkeshögskoleutbildning">Yrkeshögskoleutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Konst- och kulturutbildning">Konst- och kulturutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Tolkutbildning">Tolkutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Utbildning med endast tillsyn">Utbildning med endast tillsyn</a></li>
           </ul>
         </section>
         <section>
           <h3>För dig som bedriver utbildning</h3>
           <ul class="page-nav">
             <li>
-              <a href="#">Frågor och svar med anledning av coronaviruset</a>
+              <a href="#" aria-label="Klicka här för att få info om frågor och svar angående coronaviruset">Frågor och svar med anledning av coronaviruset</a>
             </li>
             <li>
-              <a href="#"
+              <a href="#" aria-label="Klicka här för att komma till Distansstöd"
                 >Distansstöd - för anordnare som ställer om till
                 distansundervisning</a
               >
             </li>
-            <li><a href="#">Yrkeshögskoleutbildning</a></li>
-            <li><a href="#">Konst - och kulturutbildning</a></li>
-            <li><a href="#">Tolkutbildning</a></li>
-            <li><a href="#">Utbildning med endast tillsyn</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Yrkeshögskoleutbildning för dig som bedriver utbildning">Yrkeshögskoleutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Konst- och kulturutbildning för dig som bedriver utbildning">Konst - och kulturutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Tolkutbildning för dig some bedriver utbildning">Tolkutbildning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till Utbildning med endast tillsyn för dig som bedriver utbildning">Utbildning med endast tillsyn</a></li>
           </ul>
         </section>
         <section>
@@ -118,8 +105,8 @@
               Arbetslivet är den främsta drivkraften bakom vilka
               yrkeshögskoleutbildningar som startar och hur de är upplagda.
             </p>
-            <li><a href="#">Påverka utbildningarna i yrkeshögskolan</a></li>
-            <li><a href="#">Verktyg för omställning</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till info om att påverka utbildningarna i Yrkeshögskolan">Påverka utbildningarna i yrkeshögskolan</a></li>
+            <li><a href="#" aria-label="Klicka här för att komma till verktyg för omställning">Verktyg för omställning</a></li>
           </ul>
         </section>
       </div>
@@ -159,7 +146,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav%2FScandinav_royaltyfria%2FScandinav_DW1L.jpg&width=292&height=185&method=Crop"
-              />
+              alt="Tre personer som arbetar"/>
               <h4>Tre nya utbildningar till kontaktfolk inom yrkeshögskolan</h4>
               <span>22 oktober 2020</span>
               
@@ -168,6 +155,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2Fbreddabildentvapersoner.jpg&width=292&height=185&method=Crop"
+                alt="Två personer som arbetar med en stor maskin"
               />
               <h4>
                 Yrkeshögskola - det populäraste alternativet för tjänstemän vid
@@ -180,6 +168,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav%2FScandinav_royaltyfria%2Ftolk-myh.jpg&width=292&height=185&method=Crop"
+                alt="Papper som byter händer vid ett möte"
               />
               <h4>
                 Ansök om statsbidrag för utbildning till teckenspråks- och
@@ -192,6 +181,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FMina%2520sidor%2Fmina_sidor_Blur.png&width=125&height=125&method=Crop"
+                alt="Kvinna som skriver på en laptop"
               />
               <h4>
                 Nu kan du administrera korta yrkeshögskoleutbildningar i Mina
@@ -204,7 +194,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2Fdistansstod_nyhet.jpg&width=125&height=125&method=Crop"
-                alt=""
+                alt="Tygrullar i olika färger"
               />
               <h4>
                 Webbinarium: Metodik för distansundervisning – så här klarar du
@@ -217,7 +207,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav_Q7XR-liggande.jpg&width=125&height=125&method=Crop"
-                alt=""
+                alt="Färgpenslar som står i burkar och glas"
               />
               <h4>Ny rapport synliggör social snedrekrytering</h4>
               <span>14 oktober 2020</span>
@@ -227,7 +217,8 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav%2FScandinav_royaltyfria%2FFotograf%2520Astrakan.jpg&width=125&height=125&method=Crop"
-              />
+             
+             alt="Personer som har loggböcker öppna arbetar"   />
               <h4>
                 Marknadsför YH-utbildningar som möjliga uppdragsutbildningar
               </h4>
@@ -238,6 +229,7 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FYhDatorGron.png&width=125&height=125&method=Crop"
+                alt="Laptop med YH-loggan som bakgrund"
               />
               <h4>Rekordmånga ansökningar om att bedriva YH-utbildning</h4>
               <span>30 september 2020</span>
@@ -249,48 +241,16 @@
           </section>
         </div>
 
-        <!-- <section class="card">
-          <h3>Gå direkt till</h3>
-          <ul>
-            <li><a href="#">Lediga jobb</a></li>
-            <li><a href="#">Pågående upphandlingar</a></li>
-            <li><a href="#">Pressmeddelanden</a></li>
-            <li><a href="#">Nyheter</a></li>
-            <li><a href="#">Nyhetsbrev</a></li>
-          </ul>
-        </section> -->
-        <!-- <section class="card">
-          <h3>Senaste publikationer</h3>
-          <ul>
-            <li>
-              <a href="#">Handbok för tillträde till yrkeshögskolan - 2020</a>
-            </li>
-            <li>
-              <a href="#"
-                >Kvalitetskriterier för validering - yrkeshögskoleutbildning,
-                konst - och kulturutbildningar och tolkutbildning inom
-                folkbildningen</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                >Områdesanalys hälso- och sjukvård samt socialt arbete</a
-              >
-            </li>
-          </ul>
-          <a href="#">Fler publikationer &gt;</a>
-        </section> -->
         <section class="links">
-          <a href="#" class="card button large">Anmäl brister i en utbildning</a>
-          <a href="#" class="card button large">Hitta utbildningar</a>
-          <a href="#" class="card button large">För dig som är vägledare</a>
-          <a href="#" class="card button large">Lediga jobb</a>
+          <a href="#" class="card button large" aria-label="Klicka här för att anmäla brister i en utbildning">Anmäl brister i en utbildning</a>
+          <a href="#" class="card button large" aria-label="Klicka här för att hitta utbildningar">Hitta utbildningar</a>
+          <a href="#" class="card button large" aria-label="Klicka här för att hitta info för dig som är vägledare">För dig som är vägledare</a>
+          <a href="#" class="card button large" aria-label="Klicka här för att se info om lediga jobb">Lediga jobb</a>
         </section>
       </div>
       <section class="otherlinks">
-        <a href="#" class="button primary">Epale - Digital mötesplats för vuxenutbildningar</a>
-
-        <a href="#" class="button primary">YA-delegationens material</a>
+        <a href="#" class="button primary" aria-label="Klicka här för att gå till Epale">Epale - Digital mötesplats för vuxenutbildningar</a>
+        <a href="#" class="button primary" aria-label="Klicka här för att se YA-delagationens material">YA-delegationens material</a>
       </section>
     </main>
     <!--footer below-->
@@ -302,14 +262,14 @@
             <h4>Digitalt kundforum</h4>
             <p>
               Har du en fråga? Besök vårt kundforum,
-              <a href="#">forum.myh.se</a>
+              <a href="#" aria-label="Klicka här för att gå till kundforumet">forum.myh.se</a>
             </p>
           </li>
           <li>
             <h4>Telefon</h4>
             <p>
               Ring vår växel
-              <a href="tel: 010-2090100"> 010-209 01 00</a>. Växeln är öppen
+              <a href="tel: 010-2090100" aria-label="Klicka här för att ringa MYHs växel"> 010-209 01 00</a>. Växeln är öppen
               vardagar 9.00 - 11.30, 13.00 - 15.00
             </p>
           </li>
@@ -317,17 +277,17 @@
             <h4>Press</h4>
             <p>
               Presskontakter och pressmeddelanden finns i vårt
-              <a href="nyhetsrum.html">nyhetsrum</a>
+              <a href="nyhetsrum.html" aria-label="Klicka här för att gå till nyhetsrummet">nyhetsrum</a>
             </p>
           </li>
           <li>
             <h4>E-post</h4>
             <p>
               Allmänna frågor/synpunkter:
-              <a href="mailto: info@myh.se">info@myh.se</a>
+              <a href="mailto: info@myh.se" aria-label="Klicka här för att maila allmäna frågor eller synpunkter">info@myh.se</a>
               <br />
               Registrator:
-              <a href="mailto: registrator@myh.se">registrator@myh.se</a>
+              <a href="mailto: registrator@myh.se" aria-label="Klicka här för att maila registratorn">registrator@myh.se</a>
             </p>
           </li>
           <li>
@@ -343,21 +303,21 @@
       <section class="about-list-footer">
         <h3>Om webbplatsen</h3>
         <ul>
-          <li><a href="#">Använda webbplatsen</a></li>
-          <li><a href="#">Om webbkakor (cookies)</a></li>
-          <li><a href="#">Webbkarta</a></li>
-          <li><a href="#">Tillgänglighetsredogörelse</a></li>
+          <li><a href="#" aria-label="Klicka här för information angående att använda webbplatsen">Använda webbplatsen</a></li>
+          <li><a href="#" aria-label="Klicka här för information angående webbkakor eller cookies">Om webbkakor (cookies)</a></li>
+          <li><a href="#" aria-label="Klicka här för se webbkarta ">Webbkarta</a></li>
+          <li><a href="#" aria-label="Klicka här för information angående tillgänglighet">Tillgänglighetsredogörelse</a></li>
         </ul>
         <h3>Våra övriga webbplatser</h3>
         <ul>
-          <li><a href="#">www.yrkeshogskolan.se</a></li>
-          <li><a href="#">www.konstkulturutbildning.se</a></li>
-          <li><a href="#">www.blitolk.nu</a></li>
-          <li><a href="#">www.seqf.se</a></li>
+          <li><a href="#" aria-label="Klicka här för att gå till yrkeshögskolan.se">www.yrkeshogskolan.se</a></li>
+          <li><a href="#" aria-label="Klicka här för att gå till konstkulturutbildning.se ">www.konstkulturutbildning.se</a></li>
+          <li><a href="#" aria-label="Klicka här för att gå till blitolk.nu">www.blitolk.nu</a></li>
+          <li><a href="#" aria-label="Klicka här för att gå till seqf.se">www.seqf.se</a></li>
         </ul>
         <h3>Håll dig informerad</h3>
         <h4>
-          <a><i class="fa fa-youtube"></i>Youtube</a>
+          <a href="#" aria-label="Klicka här för att komma till vår youtube-kanal"><i class="fa fa-youtube"></i>Youtube</a>
         </h4>
         <h4>Ansvarig utgivare</h4>
         <p>Thomas Persson, generaldirektör MYH.</p>
