--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -96,7 +96,7 @@
         <aside class="col1">
           <section class="link-list card">
             <h3>Lagar, regler, tillsyn</h3>
-            <ul>
+            <ul class="page-nav">
               <li><a href="#">Lagar och förordningar</a></li>
               <li><a href="#">Gällande föreskrifter</a></li>
               <li><a href="#">Allmäna råd</a></li>
@@ -106,9 +106,9 @@
             </ul>
           </section>
           <!-- style the link below as a button?-->
-          <a href="#" class="call-to-action card"
+          <!-- <a href="#" class="call-to-action card"
             >Anmäl brister i en utbildning</a
-          >
+          > -->
           <section class="icons card">
             <h4>Dela</h4>
             <ul>
