--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -45,10 +45,12 @@
         <li><a href="#">Mina sidor</a></li>
       </ul>
       <div>
+        <form>
       <label for="searchField"><i></i></label>
       <input type="search" name="searchField" placeholder="Ange sökord" />
       <button type="submit">Sök</button>
-      </div>
+    </form>  
+    </div>
     </div>
     <div id="breadcrumbs">
       <p>
