--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -18,8 +18,8 @@
     <!--header, banner and breadcrumbs-->
     <!---->
     <header class="topHeader">
-      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
-      <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
+      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="Myhs logga">
+      <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png" alt="Myhs logga">
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
       <ul class="navSticky">
@@ -97,7 +97,7 @@
         </section>
         <aside class="col1">
           <section class="link-list card">
-            <h3>Lagar, regler, tillsyn</h3>
+            <h2>Lagar, regler, tillsyn</h2>
             <ul class="page-nav">
               <li><a href="#">Lagar och förordningar</a></li>
               <li><a href="#">Gällande föreskrifter</a></li>
@@ -112,7 +112,7 @@
             >Anmäl brister i en utbildning</a
           > -->
           <section class="icons card">
-            <h4>Dela</h4>
+            <h3>Dela</h3>
             <ul>
               <!--fill with font-awesome icons-->
               <li><i class="fab fa-facebook-f"></i></li>
@@ -186,10 +186,10 @@
           <li><a href="#">www.seqf.se</a></li>
         </ul>
         <h3>Håll dig informerad</h3>
-        <h4>
+        <h3>
           <a><i class="fa fa-youtube"></i>Youtube</a>
-        </h4>
-        <h4>Ansvarig utgivare</h4>
+        </h3>
+        <h3>Ansvarig utgivare</h3>
         <p>Thomas Persson, generaldirektör MYH.</p>
       </section>
     </footer>
