adds global currentPage class to show where the user is

--- a/index/index.html
+++ b/index/index.html
@@ -27,7 +27,7 @@
       <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check" />
       <ul class="navSticky">
-        <li class="navItem"><a href="/index/index.html">Start</a></li>
+        <li class="navItem"><a href="/index/index.html" class="currentPage">Start</a></li>
         <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
         <li class="navItem">
           <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
