--- a/publikationer/publikationer.html
+++ b/publikationer/publikationer.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/templates/header/headerStyle.css" />
   <link rel="stylesheet" href="/templates/footer/footer.css" />
   <script src="https://kit.fontawesome.com/061e52cdfe.js" crossorigin="anonymous"></script>
+  <title>Publikationer</title>
 </head>
 
 <body>
-  <!--HEADER AND BANNER HERE-->
-  <!--header, banner and breadcrumbs-->
-  <!---->
   <header class="topHeader">
-    <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" />
-    <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" />
-    <label for="ham-check" id="hamburger">&#9776</label>
-    <input type="checkbox" name="ham-check" id="ham-check" />
-    <ul class="navSticky">
-      <li class="navItem"><a href="index.html">Start</a></li>
-      <li class="navItem"><a href="omOss.html">Om oss</a></li>
-      <li class="navItem">
-        <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
-      </li>
-      <li class="navItem">
-        <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
-      </li>
-      <li class="navItem"><a href="statistik.html">Statistik</a></li>
-      <li class="navItem"><a href="publikationer.html">Publikationer</a></li>
-      <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
-      <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
-    </ul>
+    <a href="/index/index.html">
+      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se">
+      <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se">
+    </a>
+    <label for="ham-check" id="hamburger">&#9776;</label>
+    <input type="checkbox" name="ham-check" id="ham-check">
+    <nav aria-label="Huvudmeny">
+      <ul class="navSticky">
+        <li class="navItem"><a href="omOss.html">Om oss</a></li>
+        <li class="navItem">
+          <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
+        </li>
+        <li class="navItem">
+          <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+        </li>
+        <li class="navItem"><a href="statistik.html">Statistik</a></li>
+        <li class="navItem"><a class="currentPage" href="publikationer.html">Publikationer</a></li>
+        <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
+        <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
   </header>
   <div role="banner" id="banner">
-    <ul>
-      <li><a href="#">In English</a></li>
-      <li><a href="#">Lättläst</a></li>
-      <li><a href="#">Anpassa</a></li>
-      <li><a href="#">Mina sidor</a></li>
-    </ul>
-    <div>
+    <nav aria-label="Sekundärmeny">
+      <ul>
+        <li><a aria-label="View this site in English" href="#">In English</a></li>
+        <li><a href="#">Lättläst</a></li>
+        <li><a href="#">Anpassa</a></li>
+        <li><a href="#">Mina sidor</a></li>
+      </ul>
+    </nav>
+    <form>
       <label for="searchField"><i></i></label>
-      <input type="search" name="searchField" placeholder="Ange sökord" />
-      <button type="submit">Sök</button>
-    </div>
+      <input type="search" id="searchField" placeholder="Ange sökord" />
+      <a href="#" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
+    </form>
   </div>
   <main class="grid gap">
     <div class="card col-2-3">
@@ -140,7 +142,7 @@
       </aside>
     </aside>
   </main>
-  <!--footer below-->
+  <!-- flex footer-->
   <footer class="footer">
     <section class="kontakt-list">
       <h3>Kontakt</h3>
@@ -156,7 +158,7 @@
           <h4>Telefon</h4>
           <p>
             Ring vår växel
-            <a href="tel: 010-2090100"> 010-209 01 00</a>. Växeln är öppen
+            <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
             vardagar 9.00 - 11.30, 13.00 - 15.00
           </p>
         </li>
@@ -170,11 +172,11 @@
         <li>
           <h4>E-post</h4>
           <p>
-            Allmänna frågor/synpunkter:
-            <a href="mailto: info@myh.se">info@myh.se</a>
+            Allmänna frågor / synpunkter:
+            <a href="mailto:info@myh.se">info@myh.se</a>
             <br />
             Registrator:
-            <a href="mailto: registrator@myh.se">registrator@myh.se</a>
+            <a href="mailto:registrator@myh.se">registrator@myh.se</a>
           </p>
         </li>
         <li>
@@ -204,7 +206,7 @@
       </ul>
       <h3>Håll dig informerad</h3>
       <h4>
-        <a><i class="fa fa-youtube"></i>Youtube</a>
+        <a><i class="fa fa-youtube"></i> Youtube</a>
       </h4>
       <h4>Ansvarig utgivare</h4>
       <p>Thomas Persson, generaldirektör MYH.</p>
