--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -18,23 +18,24 @@
     <!--header, banner and breadcrumbs-->
     <!---->
     <header class="topHeader">
-      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="Myhs logga">
-      <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png" alt="Myhs logga">
+      <a href="/index/index.html">
+        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
+        <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
+      </a>
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
       <ul class="navSticky">
-        <li class="navItem"><a href="index.html">Start</a></li>
-        <li class="navItem"><a href="omOss.html">Om oss</a></li>
+        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
         <li class="navItem">
-          <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
+          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
         </li>
         <li class="navItem">
-          <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html" class="currentPage">Lagar, Regler, Tillsyn</a>
         </li>
-        <li class="navItem"><a href="statistik.html">Statistik</a></li>
-        <li class="navItem"><a href="publikationer.html">Publikationer</a></li>
-        <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
-        <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
+        <li class="navItem"><a href="/statistik/statistik.html">Statistik</a></li>
+        <li class="navItem"><a href="/publikationer/publikationer.html">Publikationer</a></li>
+        <li class="navItem"><a href="/nyhetsRum/nyhetsRum.css">Nyhetsrum</a></li>
+        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
       </ul>
     </header>
     <div role="banner" id="banner">
@@ -44,13 +45,11 @@
         <li><a href="#">Anpassa</a></li>
         <li><a href="#">Mina sidor</a></li>
       </ul>
-      <div>
-        <form>
+      <form>
       <label for="searchField"><i></i></label>
       <input type="search" name="searchField" placeholder="Ange sökord" />
-      <button type="submit">Sök</button>
-    </form>  
-    </div>
+      <a type="submit" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
+      </form>
     </div>
     <div id="breadcrumbs">
       <p>
