adds iframe to nyhetsrum and styles it

--- a/nyhetsRum/nyhetsRum.html
+++ b/nyhetsRum/nyhetsRum.html
@@ -94,6 +94,7 @@
                         undervisningen kan behöva stöd när studiesituationen 
                         förändras och ställer nya krav på struktur, uppmärksamhet 
                         och rutiner.</p>
+                        <iframe width="846" title="Youtube-video som visar info om webbinarium" height="529" src="https://www.youtube.com/embed/lsyDMauWBoU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="card">
                     <a href="#"><h2>Storsatsning på data/IT när yrkeshögskolan växer</h2></a>
@@ -132,9 +133,9 @@
         </ul>
         </div>
         <div>
-            <aside class="sidebar card">
+            <aside class="sidebar">
                 <h3>Nyhetsrum</h3>
-                <ul>
+                <ul class="page-nav">
                     <li><a href="#">Nyheter</a></li>
                     <li><a href="#">Pressmeddelande</a></li>
                     <li><a href="#">Kalender</a></li>
