--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -166,7 +166,7 @@
             <h4>Telefon</h4>
             <p>
               Ring vår växel
-              <a href="tel: 010-2090100"> 010-209 01 00</a>. Växeln är öppen
+              <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
               vardagar 9.00 - 11.30, 13.00 - 15.00
             </p>
           </li>
@@ -180,11 +180,11 @@
           <li>
             <h4>E-post</h4>
             <p>
-              Allmänna frågor/synpunkter:
-              <a href="mailto: info@myh.se">info@myh.se</a>
+              Allmänna frågor / synpunkter:
+              <a href="mailto:info@myh.se">info@myh.se</a>
               <br />
               Registrator:
-              <a href="mailto: registrator@myh.se">registrator@myh.se</a>
+              <a href="mailto:registrator@myh.se">registrator@myh.se</a>
             </p>
           </li>
           <li>
@@ -199,24 +199,24 @@
       </section>
       <section class="about-list-footer">
         <h3>Om webbplatsen</h3>
-        <ul>
+        <ul class="page-nav">
           <li><a href="#">Använda webbplatsen</a></li>
           <li><a href="#">Om webbkakor (cookies)</a></li>
           <li><a href="#">Webbkarta</a></li>
           <li><a href="#">Tillgänglighetsredogörelse</a></li>
         </ul>
         <h3>Våra övriga webbplatser</h3>
-        <ul>
+        <ul class="page-nav">
           <li><a href="#">www.yrkeshogskolan.se</a></li>
           <li><a href="#">www.konstkulturutbildning.se</a></li>
           <li><a href="#">www.blitolk.nu</a></li>
           <li><a href="#">www.seqf.se</a></li>
         </ul>
         <h3>Håll dig informerad</h3>
-        <h3>
-          <a><i class="fa fa-youtube"></i>Youtube</a>
-        </h3>
-        <h3>Ansvarig utgivare</h3>
+        <h4>
+          <a><i class="fa fa-youtube"></i> Youtube</a>
+        </h4>
+        <h4>Ansvarig utgivare</h4>
         <p>Thomas Persson, generaldirektör MYH.</p>
       </section>
     </footer>
