--- a/index/index.html
+++ b/index/index.html
@@ -97,19 +97,47 @@
     <main class="grid">
       <div class="card col-2-3 apply">
         <section>
-          <h3>Ansök om att bedriva utbildning</h3>
+          <h2>Ansök om att bedriva utbildning</h2>
           <ul class="page-nav">
-            <li><a href="#" aria-label="Klicka här för att komma till Yrkeshögskoleutbildning">Yrkeshögskoleutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Konst- och kulturutbildning">Konst- och kulturutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Tolkutbildning">Tolkutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Utbildning med endast tillsyn">Utbildning med endast tillsyn</a></li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Yrkeshögskoleutbildning"
+                >Yrkeshögskoleutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Konst- och kulturutbildning"
+                >Konst- och kulturutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Tolkutbildning"
+                >Tolkutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Utbildning med endast tillsyn"
+                >Utbildning med endast tillsyn</a
+              >
+            </li>
           </ul>
         </section>
         <section>
-          <h3>För dig som bedriver utbildning</h3>
+          <h2>För dig som bedriver utbildning</h2>
           <ul class="page-nav">
             <li>
-              <a href="#" aria-label="Klicka här för att få info om frågor och svar angående coronaviruset">Frågor och svar med anledning av coronaviruset</a>
+              <a
+                href="#"
+                aria-label="Klicka här för att få info om frågor och svar angående coronaviruset"
+                >Frågor och svar med anledning av coronaviruset</a
+              >
             </li>
             <li>
               <a href="#" aria-label="Klicka här för att komma till Distansstöd"
@@ -117,21 +145,57 @@
                 distansundervisning</a
               >
             </li>
-            <li><a href="#" aria-label="Klicka här för att komma till Yrkeshögskoleutbildning för dig som bedriver utbildning">Yrkeshögskoleutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Konst- och kulturutbildning för dig som bedriver utbildning">Konst - och kulturutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Tolkutbildning för dig some bedriver utbildning">Tolkutbildning</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till Utbildning med endast tillsyn för dig som bedriver utbildning">Utbildning med endast tillsyn</a></li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Yrkeshögskoleutbildning för dig som bedriver utbildning"
+                >Yrkeshögskoleutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Konst- och kulturutbildning för dig som bedriver utbildning"
+                >Konst - och kulturutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Tolkutbildning för dig some bedriver utbildning"
+                >Tolkutbildning</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till Utbildning med endast tillsyn för dig som bedriver utbildning"
+                >Utbildning med endast tillsyn</a
+              >
+            </li>
           </ul>
         </section>
         <section>
-          <h3>För företag och organisationer</h3>
+          <h2>För företag och organisationer</h2>
           <ul class="page-nav">
             <p>
               Arbetslivet är den främsta drivkraften bakom vilka
               yrkeshögskoleutbildningar som startar och hur de är upplagda.
             </p>
-            <li><a href="#" aria-label="Klicka här för att komma till info om att påverka utbildningarna i Yrkeshögskolan">Påverka utbildningarna i yrkeshögskolan</a></li>
-            <li><a href="#" aria-label="Klicka här för att komma till verktyg för omställning">Verktyg för omställning</a></li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till info om att påverka utbildningarna i Yrkeshögskolan"
+                >Påverka utbildningarna i yrkeshögskolan</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                aria-label="Klicka här för att komma till verktyg för omställning"
+                >Verktyg för omställning</a
+              >
+            </li>
           </ul>
         </section>
       </div>
@@ -171,7 +235,8 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav%2FScandinav_royaltyfria%2FScandinav_DW1L.jpg&width=292&height=185&method=Crop"
-              alt="Tre personer som arbetar"/>
+                alt="Tre personer som arbetar"
+              />
               <h4>Tre nya utbildningar till kontaktfolk inom yrkeshögskolan</h4>
               <span>22 oktober 2020</span>
             </article>
@@ -236,8 +301,8 @@
               <img
                 class="thumbnail"
                 src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FScandinav%2FScandinav_royaltyfria%2FFotograf%2520Astrakan.jpg&width=125&height=125&method=Crop"
-             
-             alt="Personer som har loggböcker öppna arbetar"   />
+                alt="Personer som har loggböcker öppna arbetar"
+              />
               <h4>
                 Marknadsför YH-utbildningar som möjliga uppdragsutbildningar
               </h4>
@@ -258,15 +323,45 @@
         </div>
 
         <section class="links">
-          <a href="#" class="card button large" aria-label="Klicka här för att anmäla brister i en utbildning">Anmäl brister i en utbildning</a>
-          <a href="#" class="card button large" aria-label="Klicka här för att hitta utbildningar">Hitta utbildningar</a>
-          <a href="#" class="card button large" aria-label="Klicka här för att hitta info för dig som är vägledare">För dig som är vägledare</a>
-          <a href="#" class="card button large" aria-label="Klicka här för att se info om lediga jobb">Lediga jobb</a>
+          <a
+            href="#"
+            class="card button large"
+            aria-label="Klicka här för att anmäla brister i en utbildning"
+            >Anmäl brister i en utbildning</a
+          >
+          <a
+            href="#"
+            class="card button large"
+            aria-label="Klicka här för att hitta utbildningar"
+            >Hitta utbildningar</a
+          >
+          <a
+            href="#"
+            class="card button large"
+            aria-label="Klicka här för att hitta info för dig som är vägledare"
+            >För dig som är vägledare</a
+          >
+          <a
+            href="#"
+            class="card button large"
+            aria-label="Klicka här för att se info om lediga jobb"
+            >Lediga jobb</a
+          >
         </section>
       </div>
       <section class="otherlinks">
-        <a href="#" class="button primary" aria-label="Klicka här för att gå till Epale">Epale - Digital mötesplats för vuxenutbildningar</a>
-        <a href="#" class="button primary" aria-label="Klicka här för att se YA-delagationens material">YA-delegationens material</a>
+        <a
+          href="#"
+          class="button primary"
+          aria-label="Klicka här för att gå till Epale"
+          >Epale - Digital mötesplats för vuxenutbildningar</a
+        >
+        <a
+          href="#"
+          class="button primary"
+          aria-label="Klicka här för att se YA-delagationens material"
+          >YA-delegationens material</a
+        >
       </section>
     </main>
     <!-- flex footer-->
@@ -278,32 +373,50 @@
             <h4>Digitalt kundforum</h4>
             <p>
               Har du en fråga? Besök vårt kundforum,
-              <a href="#" aria-label="Klicka här för att gå till kundforumet">forum.myh.se</a>
+              <a href="#" aria-label="Klicka här för att gå till kundforumet"
+                >forum.myh.se</a
+              >
             </p>
           </li>
           <li>
             <h4>Telefon</h4>
             <p>
               Ring vår växel
-              <a href="tel: 010-2090100" aria-label="Klicka här för att ringa MYHs växel"> 010-209 01 00</a>. Växeln är öppen
-              vardagar 9.00 - 11.30, 13.00 - 15.00
+              <a
+                href="tel: 010-2090100"
+                aria-label="Klicka här för att ringa MYHs växel"
+              >
+                010-209 01 00</a
+              >. Växeln är öppen vardagar 9.00 - 11.30, 13.00 - 15.00
             </p>
           </li>
           <li>
             <h4>Press</h4>
             <p>
               Presskontakter och pressmeddelanden finns i vårt
-              <a href="nyhetsrum.html" aria-label="Klicka här för att gå till nyhetsrummet">nyhetsrum</a>
+              <a
+                href="nyhetsrum.html"
+                aria-label="Klicka här för att gå till nyhetsrummet"
+                >nyhetsrum</a
+              >
             </p>
           </li>
           <li>
             <h4>E-post</h4>
             <p>
               Allmänna frågor/synpunkter:
-              <a href="mailto: info@myh.se" aria-label="Klicka här för att maila allmäna frågor eller synpunkter">info@myh.se</a>
+              <a
+                href="mailto: info@myh.se"
+                aria-label="Klicka här för att maila allmäna frågor eller synpunkter"
+                >info@myh.se</a
+              >
               <br />
               Registrator:
-              <a href="mailto: registrator@myh.se" aria-label="Klicka här för att maila registratorn">registrator@myh.se</a>
+              <a
+                href="mailto: registrator@myh.se"
+                aria-label="Klicka här för att maila registratorn"
+                >registrator@myh.se</a
+              >
             </p>
           </li>
           <li>
