--- a/statistik/statistik.html
+++ b/statistik/statistik.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/templates/header/headerStyle.css">
     <link rel="stylesheet" href="/css/grid.css">
     <title>Statistik</title>
+    <script
+      src="https://kit.fontawesome.com/061e52cdfe.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 
 <body>
