--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/templates/header/headerStyle.css" />
     <link rel="stylesheet" href="verksamhetsOmraden.css" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/061e52cdfe.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
