--- a/publikationer/publikationer.html
+++ b/publikationer/publikationer.html
@@ -47,7 +47,9 @@
             <a href="/statistik/statistik.html">Statistik</a>
           </li>
           <li class="navItem">
-            <a href="/publikationer/publikationer.html">Publikationer</a>
+            <a href="/publikationer/publikationer.html" class="currentPage"
+              >Publikationer</a
+            >
           </li>
           <li class="navItem">
             <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
