--- a/index/index.html
+++ b/index/index.html
@@ -373,50 +373,32 @@
             <h4>Digitalt kundforum</h4>
             <p>
               Har du en fråga? Besök vårt kundforum,
-              <a href="#" aria-label="Klicka här för att gå till kundforumet"
-                >forum.myh.se</a
-              >
+              <a href="#">forum.myh.se</a>
             </p>
           </li>
           <li>
             <h4>Telefon</h4>
             <p>
               Ring vår växel
-              <a
-                href="tel: 010-2090100"
-                aria-label="Klicka här för att ringa MYHs växel"
-              >
-                010-209 01 00</a
-              >. Växeln är öppen vardagar 9.00 - 11.30, 13.00 - 15.00
+              <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
+              vardagar 9.00 - 11.30, 13.00 - 15.00
             </p>
           </li>
           <li>
             <h4>Press</h4>
             <p>
               Presskontakter och pressmeddelanden finns i vårt
-              <a
-                href="nyhetsrum.html"
-                aria-label="Klicka här för att gå till nyhetsrummet"
-                >nyhetsrum</a
-              >
+              <a href="nyhetsrum.html">nyhetsrum</a>
             </p>
           </li>
           <li>
             <h4>E-post</h4>
             <p>
-              Allmänna frågor/synpunkter:
-              <a
-                href="mailto: info@myh.se"
-                aria-label="Klicka här för att maila allmäna frågor eller synpunkter"
-                >info@myh.se</a
-              >
+              Allmänna frågor / synpunkter:
+              <a href="mailto:info@myh.se">info@myh.se</a>
               <br />
               Registrator:
-              <a
-                href="mailto: registrator@myh.se"
-                aria-label="Klicka här för att maila registratorn"
-                >registrator@myh.se</a
-              >
+              <a href="mailto:registrator@myh.se">registrator@myh.se</a>
             </p>
           </li>
           <li>
