--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -42,7 +42,9 @@
             >
           </li>
           <li class="navItem">
-            <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html"
+            <a
+              href="/lagarReglerTillsyn/lagarReglerTillsyn.html"
+              class="currentPage"
               >Lagar, Regler, Tillsyn</a
             >
           </li>
