--- a/statistik/statistik.html
+++ b/statistik/statistik.html
@@ -48,7 +48,7 @@
             >
           </li>
           <li class="navItem">
-            <a href="/statistik/statistik.html">Statistik</a>
+            <a href="/statistik/statistik.html" class="currentPage">Statistik</a>
           </li>
           <li class="navItem">
             <a href="/publikationer/publikationer.html">Publikationer</a>
