--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -35,7 +35,9 @@
         <ul class="navSticky">
           <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
           <li class="navItem">
-            <a href="/verksamhetsOmraden/verksamhetsOmraden.html"
+            <a
+              href="/verksamhetsOmraden/verksamhetsOmraden.html"
+              class="currentPage"
               >Verksamhetsområden</a
             >
           </li>
