fixes title tag in head

--- a/publikationer/publikationer.html
+++ b/publikationer/publikationer.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/061e52cdfe.js"
       crossorigin="anonymous"
     ></script>
-    <title>Publikationer</title>
+    <title>MYH.se | Publikationer</title>
   </head>
 
   <body>
