--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MYH.se | Lagar, regler och tillsyn</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/templates/header/headerStyle.css" />
     <link rel="stylesheet" href="/templates/footer/footer.css" />
