--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/templates/footer/footer.css" />
     <link rel="stylesheet" href="/templates/header/headerStyle.css" />
     <link rel="stylesheet" href="verksamhetsOmraden.css" />
-    <title>Document</title>
+    <title>MYH.se | Verksamhetsområden</title>
     <script
       src="https://kit.fontawesome.com/061e52cdfe.js"
       crossorigin="anonymous"
