--- a/omOss/omOss.html
+++ b/omOss/omOss.html
@@ -25,7 +25,7 @@
       <label for="ham-check" id="hamburger">&#9776;</label>
       <input type="checkbox" name="ham-check" id="ham-check" />
       <ul class="navSticky">
-        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
+        <li class="navItem"><a class="currentPage" href="/omOss/omOss.html">Om oss</a></li>
         <li class="navItem">
           <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
         </li>
