fixes map glitch

--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -306,6 +306,7 @@
                             <li><i class="far fa-envelope"></i></li>
                         </ul>
                     </section>
+                    </div>
                     <br />
                     <div id="map">
                         <iframe
