Added page title

--- a/omOss/omOss.html
+++ b/omOss/omOss.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Om oss</title>
+  <title>MYH.se | Om oss</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/templates/header/headerStyle.css" />
   <link rel="stylesheet" href="/templates/footer/footer.css" />
