--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -14,65 +14,54 @@
 
 <body>
     <header class="topHeader">
-      <a href="/index/index.html" aria-label="Till startsidan">
-        <img
-          id="biglogo"
-          src="/templates/header/myh_logo_white_big_shaded.png"
-          alt="myh.se"
-        />
-        <img
-          id="smalllogo"
-          src="/templates/header/myh_logo_white_big_shaded_small.png"
-          alt="myh.se"
-        />
-      </a>
-
-      <nav aria-label="Huvudmeny">
-        <label for="ham-check" id="hamburger">&#9776;</label>
-        <input type="checkbox" name="ham-check" id="ham-check" />
-        <ul class="navSticky">
-          <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
-          <li class="navItem">
-            <a href="/verksamhetsOmraden/verksamhetsOmraden.html"
-              >Verksamhetsområden</a
-            >
-          </li>
-          <li class="navItem">
-            <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html"
-              >Lagar, Regler, Tillsyn</a
-            >
-          </li>
-          <li class="navItem">
-            <a href="/statistik/statistik.html">Statistik</a>
-          </li>
-          <li class="navItem">
-            <a href="/publikationer/publikationer.html">Publikationer</a>
-          </li>
-          <li class="navItem">
-            <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
-          </li>
-          <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div role="banner" id="banner">
+        <a href="/index/index.html" aria-label="Till startsidan">
+          <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se" />
+          <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se" />
+        </a>
+        
+        <nav aria-label="Huvudmeny">
+          <label for="ham-check" id="hamburger">&#9776;</label>
+          <input type="checkbox" name="ham-check" id="ham-check" />
+          <ul class="navSticky">
+            <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
+            <li class="navItem">
+              <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
+            </li>
+            <li class="navItem">
+              <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+            </li>
+            <li class="navItem">
+              <a href="/statistik/statistik.html">Statistik</a>
+            </li>
+            <li class="navItem">
+              <a href="/publikationer/publikationer.html">Publikationer</a>
+            </li>
+            <li class="navItem">
+              <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
+            </li>
+            <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div role="banner" id="banner">
         <nav aria-label="Sekundärmeny">
-            <ul>
-                <li>
-                    <a aria-label="View this site in English" href="#">In English</a>
-                </li>
-                <li><a href="#">Lättläst</a></li>
-                <li><a href="#">Anpassa</a></li>
-                <li><a href="#">Mina sidor</a></li>
-            </ul>
+          <ul>
+            <li>
+              <a aria-label="View this site in English" href="#">In English</a>
+            </li>
+            <li><a href="#">Lättläst</a></li>
+            <li><a href="#">Anpassa</a></li>
+            <li><a href="#">Mina sidor</a></li>
+          </ul>
         </nav>
         <form>
-            <label for="searchField"><i></i></label>
-            <input type="search" type="search" aria-label="Sök på webbplatsen" value="Sök" />
-            <a href="#" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
-            <!-- <input class="button" type="submit" value="Skicka"> -->
-    </form>
-    </div>
+          <label for="searchField">Sök</label>
+          <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
+    
+          <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
+            Sök</a></button>
+        </form>
+      </div>
     <main class="makeBodyMoreNarrow">
                 <section class="card verticalMargin">
                     <ul class="breadcrumbs">
@@ -320,73 +309,73 @@
     <!-- flex footer-->
     <footer class="footer">
         <section class="kontakt-list">
-            <h3>Kontakt</h3>
-            <ul>
-                <li>
-                    <h4>Digitalt kundforum</h4>
-                    <p>
-                        Har du en fråga? Besök vårt kundforum,
-                        <a href="#">forum.myh.se</a>
-                    </p>
-                </li>
-                <li>
-                    <h4>Telefon</h4>
-                    <p>
-                        Ring vår växel
-                        <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
-                        vardagar 9.00 - 11.30, 13.00 - 15.00
-                    </p>
-                </li>
-                <li>
-                    <h4>Press</h4>
-                    <p>
-                        Presskontakter och pressmeddelanden finns i vårt
-                        <a href="nyhetsrum.html">nyhetsrum</a>
-                    </p>
-                </li>
-                <li>
-                    <h4>E-post</h4>
-                    <p>
-                        Allmänna frågor / synpunkter:
-                        <a href="mailto:info@myh.se">info@myh.se</a>
-                        <br />
-                        Registrator:
-                        <a href="mailto:registrator@myh.se">registrator@myh.se</a>
-                    </p>
-                </li>
-                <li>
-                    <h4>Adress</h4>
-                    <p>
-                        Myndigheten för yrkeshögskolan <br />
-                        Box 145 <br />
-                        721 05 Västerås
-                    </p>
-                </li>
-            </ul>
+          <h3>Kontakt</h3>
+          <ul>
+            <li>
+              <h4>Digitalt kundforum</h4>
+              <p>
+                Har du en fråga? Besök vårt kundforum,
+                <a href="#">forum.myh.se</a>
+              </p>
+            </li>
+            <li>
+              <h4>Telefon</h4>
+              <p>
+                Ring vår växel
+                <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
+                vardagar 9.00 - 11.30, 13.00 - 15.00
+              </p>
+            </li>
+            <li>
+              <h4>Press</h4>
+              <p>
+                Presskontakter och pressmeddelanden finns i vårt
+                <a href="nyhetsrum.html">nyhetsrum</a>
+              </p>
+            </li>
+            <li>
+              <h4>E-post</h4>
+              <p>
+                Allmänna frågor / synpunkter:
+                <a href="mailto:info@myh.se">info@myh.se</a>
+                <br />
+                Registrator:
+                <a href="mailto:registrator@myh.se">registrator@myh.se</a>
+              </p>
+            </li>
+            <li>
+              <h4>Adress</h4>
+              <p>
+                Myndigheten för yrkeshögskolan <br />
+                Box 145 <br />
+                721 05 Västerås
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="about-list-footer">
-            <h3>Om webbplatsen</h3>
-            <ul class="page-nav">
-                <li><a href="#">Använda webbplatsen</a></li>
-                <li><a href="#">Om webbkakor (cookies)</a></li>
-                <li><a href="#">Webbkarta</a></li>
-                <li><a href="#">Tillgänglighetsredogörelse</a></li>
-            </ul>
-            <h3>Våra övriga webbplatser</h3>
-            <ul class="page-nav">
-                <li><a href="#">www.yrkeshogskolan.se</a></li>
-                <li><a href="#">www.konstkulturutbildning.se</a></li>
-                <li><a href="#">www.blitolk.nu</a></li>
-                <li><a href="#">www.seqf.se</a></li>
-            </ul>
-            <h3>Håll dig informerad</h3>
-            <h4>
-                <a><i class="fa fa-youtube"></i> Youtube</a>
-            </h4>
-            <h4>Ansvarig utgivare</h4>
-            <p>Thomas Persson, generaldirektör MYH.</p>
+          <h3>Om webbplatsen</h3>
+          <ul class="page-nav">
+            <li><a href="#">Använda webbplatsen</a></li>
+            <li><a href="#">Om webbkakor (cookies)</a></li>
+            <li><a href="#">Webbkarta</a></li>
+            <li><a href="#">Tillgänglighetsredogörelse</a></li>
+          </ul>
+          <h3>Våra övriga webbplatser</h3>
+          <ul class="page-nav">
+            <li><a href="#">www.yrkeshogskolan.se</a></li>
+            <li><a href="#">www.konstkulturutbildning.se</a></li>
+            <li><a href="#">www.blitolk.nu</a></li>
+            <li><a href="#">www.seqf.se</a></li>
+          </ul>
+          <h3>Håll dig informerad</h3>
+          <h4>
+            <a><i class="fa fa-youtube"></i> Youtube</a>
+          </h4>
+          <h4>Ansvarig utgivare</h4>
+          <p>Thomas Persson, generaldirektör MYH.</p>
         </section>
-    </footer>
+      </footer>
 </body>
 
 </html>
