--- a/statistik/statistik.html
+++ b/statistik/statistik.html
@@ -93,41 +93,37 @@
       <article class="col-2-3 card">
 
         <h2>Faktablad med statistik </h2>
-        <p>
-          Här kan du ladda ner faktablad med kortfattad statistik om yrkeshögskole-
-          utbildningar, konst- och kulturutbildningar samt tolkutbildningar.
-          <br>
-          <a
-            href="https://www.myh.se/Documents/Statitik/Yrkesh%c3%b6gskoleutbildningar/Kortfattad%20statistik/Kortfattad_statistik_yrkeshogskolan_2019.pdf">Faktablad
-            med kortfattad statistik om yrkeshögskolan 2019</a>
-          <br>
-          <a
-            href="https://www.myh.se/Documents/Statitik/Konst-och%20kulturutbildningar%20och%20vissa%20andra%20utbildningar/Konst-%20och%20kulturutbildningar/Kortfattad%20statistik/Kortfattad_statistik_konstkulturutbildningar_2019.pdf">Faktablad
-            med kortfattad statistik om konst- och kulturutbildningar 2019</a>
-          <br>
-          <a
-            href="https://www.myh.se/Documents/Statitik/Tolkutbildningar%20inom%20folkbildningen/Kortfattad%20statistik/Kortfattad_statistik_tolkutbildningar_2019.pdf">Faktablad
-            med kortfattad statistik om tolkutbildningar 2019</a>
-        </p>
+        <p>Här kan du ladda ner faktablad med kortfattad statistik om yrkeshögskole-
+          utbildningar, konst- och kulturutbildningar samt tolkutbildningar. </p>
+        <ul class="page-nav">
+          <li><a
+              href="https://www.myh.se/Documents/Statitik/Yrkesh%c3%b6gskoleutbildningar/Kortfattad%20statistik/Kortfattad_statistik_yrkeshogskolan_2019.pdf">Faktablad
+              med kortfattad statistik om yrkeshögskolan 2019</a></li>
+          <li> <a
+              href="https://www.myh.se/Documents/Statitik/Konst-och%20kulturutbildningar%20och%20vissa%20andra%20utbildningar/Konst-%20och%20kulturutbildningar/Kortfattad%20statistik/Kortfattad_statistik_konstkulturutbildningar_2019.pdf">Faktablad
+              med kortfattad statistik om konst- och kulturutbildningar 2019</a></li>
+          <li><a
+              href="https://www.myh.se/Documents/Statitik/Tolkutbildningar%20inom%20folkbildningen/Kortfattad%20statistik/Kortfattad_statistik_tolkutbildningar_2019.pdf">Faktablad
+              med kortfattad statistik om tolkutbildningar 2019</a></li>
+        </ul>
+
       </article>
       <article class="col-2-3 card">
         <h2>Statistiska årsrapporter</h2>
         <p>
           Via länkarna nedan hittar du Myndigheten för yrkeshögskolans senaste årsrapporter med samlad
-          statistik om de utbildningsformer som vi ansvarar för.
-          <br>
-          <a href="https://www.myh.se/Publikationer/2020/Statistisk-arsrapport-2020/">Statistisk
-            årsrapport 2020</a>
-          <br>
-          <a href="https://www.myh.se/Publikationer/2019/Statistisk-arsrapport-2019/">Statistisk
-            årsrapport 2019</a>
-          <br>
-          <a href="https://www.myh.se/Publikationer/2018/Statistisk-arsrapport-2018/">Statistisk
-            årsrapport 2018</a>
-          <br>
-          <a href="https://www.myh.se/Publikationer/2017/Statistisk-arsrapport-2017/">Statistisk
-            årsrapport 2017</a>
-        </p>
+          statistik om de utbildningsformer som vi ansvarar för.</p>
+
+        <ul class="page-nav">
+          <li><a href="https://www.myh.se/Publikationer/2020/Statistisk-arsrapport-2020/">Statistisk
+              årsrapport 2020</a></li>
+          <li><a href="https://www.myh.se/Publikationer/2019/Statistisk-arsrapport-2019/">Statistisk
+              årsrapport 2019</a></li>
+          <li><a href="https://www.myh.se/Publikationer/2018/Statistisk-arsrapport-2018/">Statistisk
+              årsrapport 2018</a></li>
+          <li><a href="https://www.myh.se/Publikationer/2017/Statistisk-arsrapport-2017/">Statistisk
+              årsrapport 2017</a></li>
+        </ul>
       </article>
     </section>
 
