removed unncecessary containers and cleaned up

--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -81,12 +81,12 @@
     </form>
     </div>
     <!--content below-->
-    <main>
-      <article class="grid grid-gap">
+    <main class="grid gap">
+     
         <section class="col-2-3 card">
           <ul class="breadcrumbs">
             <li><a href="#">Start</a></li>
-            <li></li>
+            <li>Lagar, regler, tillsyn</li>
           </ul>
           <h1>Lagar, regler, tillsyn</h1>
           <div class="img-container">
@@ -102,21 +102,22 @@
             avgifter
           </p>
           <p>
-            Här hittar du de <a href="#">lagar och förordningar</a> som reglerar
+            Här hittar du delagar och förordningar som reglerar
             de utbildningsformer som Myndigheten för yrkeshögskolan ansvarar
-            för. Här finns även de <a href="#">föreskrifter</a> som vi har
+            för. Här finns även de föreskrifter som vi har
             beslutat om, samt de allmäna råd vi har gett ut.
           </p>
           <p>
-            Genom <a href="#">tillsyn</a> kontrollerar myndigheten att
+            Genom tillsyn kontrollerar myndigheten att
             utbildningarna följer de lagar och regler som gäller. I menyn till
             höger kan du läsa om hur tillsynen går till och hitta
             tillsynsbeslut.
           </p>
           <p>
             Om du anser att det finns brister i en utbildning kan du anmäla det
-            till oss. <a href="#">Anmäl brister i en utbildning.</a>
+            till oss. 
           </p>
+          <a class="button">Anmäl brister i en utbildning</a>
         </section>
         <aside class="col1">
           <section class="link-list card">
@@ -144,7 +145,7 @@
             </ul>
           </section>
         </aside>
-      </article>
+    
     </main>
     <!--footer below-->
     <footer class="footer">
