--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -80,6 +80,10 @@
     </div>
     <main>
       <div class="card intro">
+        <ul class="breadcrumbs">
+        <li><a href="#">Start</a></li>
+        <li>Verksamhetsområden</li>
+      </ul>
         <h1>Verksamhetsområden</h1>
         <div>
           <p>
