--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -227,7 +227,7 @@
 
                     <section class="card">
                         <h3>
-                            Organisationsnummer
+                            Organisationsnr.
                         </h3>
                         <br />
                         <p>
